# OS_ex3

./: CMakeLists.txt  Makefile  MapReduceFramework.cpp  README
mattanTests/: SampleClient.cpp
resources/: MapReduceFramework.cpp  MapReduceFramework.h
resources/Atomic/: atomicdemo.cpp
resources/Barrier/: barrierdemo.cpp
resources/Sample_Client/: SampleClient.cpp
